# matrx-orm

./: .env.example  .gitignore  CLAUDE.md  DESKTOP-API-INTEGRATION.md  MIGRATIONS.md  MODULE_README.md  README.md  REFACTORING_SUMMARY.md  RESERVED_NAMES.md  TASKS-TEMPLATE.md  TASKS.md  TRANSACTION_POOLER_PLAN.MD  WRITE-QUEUE-UPGRADE.md  pyproject.toml  release.sh  test_model_cls_refactor.py
.arman/pending/versioning/: INITIAL.md
database/orm/extended/managers/: ai_model_base.py
docs/: migrations.md
scripts/: publish.sh  release.sh
src/: MODULE_README.md
src/matrx_orm/: MODULE_README.md  __init__.py  error_handling.py  exceptions.py  state.py  transactions.py
src/matrx_orm/adapters/: MODULE_README.md  __init__.py  async_postgresql.py  base_adapter.py  postgresql.py  postgrest_client_adapter.py  supabase.py  supabase_adapter.py
src/matrx_orm/api/: __init__.py  auth.py  config.py  handlers.py  protocol.py  server.py
src/matrx_orm/client/: MODULE_README.md  __init__.py  postgres_connection.py  postgrest.py  supabase_auth.py  supabase_config.py  supabase_manager.py
src/matrx_orm/core/: EXTENDED-TASK.md  MODULE_README.md  RELATIONS-TASKS.md  TASKS.md  async_db_manager.py  base.py  config.py  expressions.py  extended.py  fields.py  managed_models.py  model_dto.py  model_view.py  paginator.py  pydantic_bridge.py  registry.py  relations.py  signals.py  transaction.py  types.py  write_queue.py
src/matrx_orm/extended/: app_error_handler.py
src/matrx_orm/extended/managers/: ai_model_base.py  ai_model_manager.py  all_managers.py
src/matrx_orm/middleware/: base.py
src/matrx_orm/migrations/: MODULE_README.md  __init__.py  cli.py  ddl.py  diff.py  executor.py  integration.py  loader.py  manager.py  operations.py  state.py  table_filter.py
src/matrx_orm/operations/: MODULE_README.md  create.py  delete.py  read.py  update.py
src/matrx_orm/python_sql/: MODULE_README.md  db_objects.py  table_detailed_relationships.py  table_typescript_relationship.py
src/matrx_orm/query/: MODULE_README.md  builder.py  executor.py
src/matrx_orm/schema_builder/: MODULE_README.md  __init__.py  code_handler.py  columns.py  common.py  diff_preview.py  generator.py  relationships.py  runner.py  schema.py  schema_manager.py  tables.py  views.py
src/matrx_orm/schema_builder/helpers/: __init__.py  auto_config.py  base_generators.py  configs.py  entity_generators.py  git_checker.py  manager_dto_creator.py  manual_overrides.py
src/matrx_orm/schema_builder/individual_managers/: columns.py  common.py  relationships.py  schema.py  tables.py  views.py
src/matrx_orm/schema_builder/parts_generators/: entity_field_override_generator.py  entity_main_hook_generator.py  entity_override_generator.py
src/matrx_orm/schema_builder/types/: AutomationSchemaTypes.ts  entities.ts
src/matrx_orm/schema_builder/utils/schema/: entityFieldNameGroups.ts  entityPrimaryKeys.ts  initialSchemas.ts  initialTableSchemas.ts  lookupSchema.ts
src/matrx_orm/schema_builder/utils/schema/schema-processing/: entityOverrides.ts  fieldOverrides.ts
src/matrx_orm/sql_executor/: MODULE_README.md  executor.py  queries.py
src/matrx_orm/utils/: cache_manager.py  connection_pool.py  sql_utils.py  type_converters.py
tests/: MODULE_README.md  conftest.py  database_project_config.py  generation_test.py  test_model_cls_refactor.py
tests/level1/: MODULE_README.md  test_api_auth.py  test_api_config.py  test_api_handlers.py  test_api_protocol.py  test_config.py  test_ddl_generator.py  test_exceptions.py  test_fields.py  test_migration_diff_types.py  test_migration_loader.py  test_model_instance.py  test_model_meta.py  test_postgrest_filters.py  test_query_builder.py  test_query_executor_sql.py  test_registry.py  test_relations.py  test_state_cache.py  test_supabase_auth.py  test_supabase_config.py
tests/level2/: MODULE_README.md  conftest.py  test_bulk_ops.py  test_cache_integration.py  test_crud.py  test_foreign_keys.py  test_m2m.py  test_manager.py  test_migrations_live.py  test_query_execution.py  test_schema_diff.py
tests/sample_project/: .env.example  README.md  database_registry.py  generate.py  matrx_orm.yaml  run_schema_generation.py  test_schema_generation.py
tests/sample_project_desktop/: .env.example  README.md  client_example.py  client_example.ts  client_supabase_example.py  server.py
tests/schema/: entity_tests.py  test_base_generation.py  test_generate_schema.py
