[project]
name = "matrx-orm"
version = "1.2.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "jatin.b.rx3@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "asyncpg==0.30.0",
    "gitpython>=3.1.44",
    "psycopg[binary]>=3.2.5",
    "psycopg-pool>=3.2.5",
    "matrx-utils>=1.0.2",
]

[project.scripts]
matrx-orm = "matrx_orm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/matrx_orm"]

[tool.hatch.metadata]
allow-direct-references = true
